--- a/quarto-brand-demo.qmd
+++ b/quarto-brand-demo.qmd
@@ -5,7 +5,7 @@ format:
   typst:
     include-in-header:
       text: |
-        #set text(fallback: false, weight: 100)
+        #set text(fallback: false)
     logo:
       width: 10em
 ---
@@ -22,16 +22,16 @@ Here is a larger block of code:
 ```{r}
 # Function to print the Fibonacci sequence using a loop
 print_fibonacci <- function(n) {
-a <- 0
-b <- 1
+  a <- 0
+  b <- 1
 
-cat("Fibonacci Sequence: ")
-for (i in 1:n) {
-	cat(a, " ")
-	next_num <- a + b
-	a <- b
-	b <- next_num
-}
+  cat("Fibonacci Sequence: ")
+  for (i in 1:n) {
+    cat(a, " ")
+    next_num <- a + b
+    a <- b
+    b <- next_num
+  }
 }
 
 # Example usage
